--- a/index.html
+++ b/index.html
@@ -46,8 +46,13 @@ prizes in local competitions. I hope it becomes one of your favorites as well!</
 </ol>
 
 </section>
+<!--Finish Section-->
 
-
+<footer>
+	<section class="main">
+		<p><a href="#">Contact</a></p>
+	</section>
+</footer>
 
 </body>
 </html>
