--- a/index.html
+++ b/index.html
@@ -50,7 +50,11 @@ prizes in local competitions. I hope it becomes one of your favorites as well!</
 
 <footer>
 	<section class="main">
-		<p><a href="#">Contact</a></p>
+		<ul>
+			<li><a href="#">Home</a></li>
+			<li><a href="#">About us</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
 	</section>
 </footer>
 
