--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@ prizes in local competitions. I hope it becomes one of your favorites as well!</
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About us</a></li>
 			<li><a href="#">Contact</a></li>
+			<li><a href="#">With Love From Ecatepec</a></li>
 		</ul>
 	</section>
 </footer>
