--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@ prizes in local competitions. I hope it becomes one of your favorites as well!</
 
 <footer>
 	<section class="main">
-		<h3>INFORMATION</h3>
+		<h3 id="info">INFORMATION</h3>
 		<ul>
 			<li><a href="#">Home</a></li>
 			<li><a href="#">About us</a></li>
