--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ prizes in local competitions. I hope it becomes one of your favorites as well!</
 <hr>
 </section>
 <section class="main">
-<h2>Directions</h2>
+<h2 class="c">Directions</h2>
 <ol>
   <li>Preheat oven to 425 degrees F (220 degrees C). Melt the butter in a saucepan. Stir in
     flour to form a paste. Add water, white sugar and brown sugar, and bring to a boil. Reduce
